--- a/packages/cli-scaffold-graphql-service/package.json
+++ b/packages/cli-scaffold-graphql-service/package.json
@@ -2,7 +2,7 @@
   "name": "@webiny/cli-scaffold-graphql-service",
   "version": "1.0.0",
   "description": "Scaffolds a graphql service for you",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "@webiny/api": "^3.0.2",
     "@webiny/api-security": "^3.0.2",
     "@webiny/commodo": "^3.0.1",
+    "execa": "^4.0.0",
     "graphql-tag": "^2.10.3",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
