--- a/packages/api-mailchimp/package.json
+++ b/packages/api-mailchimp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-mailchimp",
-  "version": "3.0.2",
+  "version": "3.0.3-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/api": "^3.0.2",
-    "@webiny/api-security": "^3.0.2",
+    "@webiny/api-security": "^3.1.0-next.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
     "got": "^9.6.0",
