--- a/packages/app-form-builder-theme/package.json
+++ b/packages/app-form-builder-theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@webiny/app-form-builder-theme",
-  "version": "2.0.6",
+  "version": "2.0.7-next.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@webiny/app-form-builder": "^2.0.8",
-    "@webiny/app-i18n": "^3.0.4",
+    "@webiny/app-form-builder": "^2.1.0-next.0",
+    "@webiny/app-i18n": "^3.1.0-next.0",
     "@webiny/form": "^3.0.1",
     "@webiny/validation": "^3.0.1"
   },
