--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/ui",
-  "version": "3.0.4",
+  "version": "3.1.0-next.0",
   "main": "index.js",
   "repository": {
     "type": "git",
