--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-page-builder",
-  "version": "3.1.0-next.0",
+  "version": "3.1.0",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/api": "^3.0.2",
-    "@webiny/api-security": "^3.1.0-next.0",
+    "@webiny/api-security": "^3.1.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
     "@webiny/http-handler-ssr": "^2.1.0",
