--- a/packages/api-security/package.json
+++ b/packages/api-security/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-security",
-  "version": "3.1.0-next.0",
+  "version": "3.1.0",
   "main": "index.js",
   "repository": {
     "type": "git",
