--- a/packages/app-page-builder-theme/package.json
+++ b/packages/app-page-builder-theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@webiny/app-page-builder-theme",
-  "version": "2.0.8-next.0",
+  "version": "2.0.8",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@webiny/app": "^3.0.4-next.0",
-    "@webiny/app-page-builder": "^3.2.0-next.0",
+    "@webiny/app": "^3.0.4",
+    "@webiny/app-page-builder": "^3.2.0",
     "@webiny/plugins": "^3.0.1",
     "@webiny/react-router": "^2.0.2",
     "classnames": "^2.2.6",
