--- a/packages/cli-scaffold-graphql-service/templateService/package.json
+++ b/packages/cli-scaffold-graphql-service/templateService/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@webiny/api-[SERVICE_NAME]",
+  "name": "@webiny/api-SERVICE_NAME",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
+    "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch"
   },
   "keywords": [],
   "author": "",
