--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -30,7 +30,8 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.8.3"
+    "@babel/preset-typescript": "^7.8.3",
+    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4"
   },
   "optionalDependencies": {
     "fsevents": "^1.2.4"
