--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -21,7 +21,6 @@
     "@webiny/api-security": "^3.0.0",
     "@webiny/commodo": "^3.0.0",
     "@webiny/commodo-graphql": "^3.0.0",
-    "@webiny/plugins": "^3.0.0",
     "@webiny/validation": "^3.0.0",
     "fecha": "^4.0.0",
     "graphql-tag": "^2.10.1",
@@ -32,7 +31,20 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-flow": "^7.0.0"
+    "@babel/preset-flow": "^7.0.0",
+    "@commodo/fields-storage": "^1.0.3",
+    "@commodo/fields": "^1.0.2",
+    "@commodo/name": "^1.1.0",
+    "@shelf/jest-mongodb": "^1.1.3",
+    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
+    "@webiny/api-plugin-commodo-mongodb": "^2.0.2",
+    "apollo-graphql": "^0.4.1",
+    "chalk": "^3.0.0",
+    "graphql": "^14.6.0",
+    "mdbid": "^1.0.0",
+    "prettier": "^1.19.1",
+    "ramda": "^0.27.0",
+    "shortid": "^2.2.15"
   },
   "publishConfig": {
     "access": "public"
