--- a/packages/cli-scaffold-graphql-service/templateService/package.json
+++ b/packages/cli-scaffold-graphql-service/templateService/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "@webiny/api-SERVICE_NAME",
+  "name": "PACKAGE_NAME",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-runtime":  "^7.8.3",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-lodash":  "^3.3.4"
   },
   "keywords": [],
   "author": "",
