chore: add visshaljagtap as contributor.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -140,9 +140,7 @@
       "name": "Vishal Jagtap",
       "avatar_url": "https://avatars2.githubusercontent.com/u/35190080?v=4",
       "profile": "https://github.com/visshaljagtap",
-      "contributions": [
-        "doc"
-      ]
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
