--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -141,6 +141,13 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/35190080?v=4",
       "profile": "https://github.com/visshaljagtap",
       "contributions": []
+    },
+    {
+      "login": "Arvisix",
+      "name": "Maxim Moroz",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/13711406?v=4",
+      "profile": "https://github.com/Arvisix",
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
