wip: add headless handler

--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-headless-cms",
-  "version": "2.1.1",
+  "version": "0.1.0",
   "private": true,
   "main": "index.js",
   "repository": {
@@ -22,6 +22,7 @@
     "@webiny/commodo": "^3.0.0",
     "@webiny/commodo-graphql": "^3.0.0",
     "@webiny/validation": "^3.0.0",
+    "@webiny/api-plugin-create-apollo-handler": "^2.0.2",
     "fecha": "^4.0.0",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.4",
