--- a/packages/api-headless-cms/tsconfig.build.json
+++ b/packages/api-headless-cms/tsconfig.build.json
@@ -6,9 +6,11 @@
     "../api",
     "../api-i18n",
     "../api-plugin-commodo-db-proxy",
+    "../api-plugin-create-apollo-handler",
     "../api-security",
     "../commodo",
     "../commodo-graphql",
+    "../http-handler",
     "../validation",
     "./jest.config.js"
   ],
@@ -21,8 +23,10 @@
     { "path": "../api/tsconfig.build.json" },
     { "path": "../api-i18n/tsconfig.build.json" },
     { "path": "../api-plugin-commodo-db-proxy/tsconfig.build.json" },
+    { "path": "../api-plugin-create-apollo-handler/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
+    { "path": "../http-handler/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
   ]
 }
