--- a/packages/api-headless-cms/tsconfig.json
+++ b/packages/api-headless-cms/tsconfig.json
@@ -5,9 +5,11 @@
     { "path": "../api" },
     { "path": "../api-i18n" },
     { "path": "../api-plugin-commodo-db-proxy" },
+    { "path": "../api-plugin-create-apollo-handler" },
     { "path": "../api-security" },
     { "path": "../commodo" },
     { "path": "../commodo-graphql" },
+    { "path": "../http-handler" },
     { "path": "../validation" }
   ]
 }
