--- a/examples/api/serverless.yml
+++ b/examples/api/serverless.yml
@@ -194,6 +194,26 @@ headlessCms:
       - "@webiny/api-i18n/plugins/service"
       - "@webiny/api-headless-cms/plugins"
 
+headlessHandler:
+  build:
+    entry: "./services/headless/src/index"
+    define:
+      APOLLO_HANDLER_OPTIONS: ${vars.apollo}
+      DB_PROXY_OPTIONS:
+        functionArn: ${dbProxy.arn}
+      SECURITY_OPTIONS: ${vars.security}
+  deploy:
+    component: "@webiny/serverless-function"
+    inputs:
+      description: Headless CMS handler
+      region: ${vars.region}
+      code: ./services/headless/build
+      handler: handler.handler
+      memory: 512
+      env:
+        I18N_API_URL: ${i18n.api.graphqlUrl}
+        DEBUG: ${vars.debug}
+
 api:
   component: "@webiny/serverless-api-gateway"
   inputs:
@@ -203,6 +223,10 @@ api:
       - path: /graphql
         method: ANY
         function: ${gateway}
+      - path: /cms/{key+}
+        method: ANY
+        function: ${headlessHandler}
+
 cdn:
   component: "@webiny/serverless-aws-cloudfront"
   inputs:
@@ -211,6 +235,11 @@ cdn:
       - url: ${api.url}
         pathPatterns:
           "/graphql":
+            ttl: 0
+            forward:
+              headers: ["Accept", "Accept-Language"]
+            allowedHttpMethods: ["GET", "HEAD", "OPTIONS", "PUT", "POST", "PATCH", "DELETE"]
+          "/cms":
             ttl: 0
             forward:
               headers: ["Accept", "Accept-Language"]
