wip: decoupled build/webpack from deploy

--- a/examples/api/serverless.yml
+++ b/examples/api/serverless.yml
@@ -172,6 +172,30 @@ formBuilder:
       - "@webiny/api-form-builder/plugins"
       - "@webiny/api-form-builder/plugins/useSsrCacheTags"
 
+headlessHandler:
+  watch:
+    paths:
+      - ./services/headless/build/*
+  build:
+    root: ./services/headless
+    script: yarn build --watch=${cli.watch}
+  deploy:
+    component: "@webiny/serverless-function"
+    inputs:
+      description: Headless CMS handler
+      region: ${vars.region}
+      code: ./services/headless/build
+      handler: handler.handler
+      memory: 512
+      env:
+        SECURITY_API_URL: ${security.api.graphqlUrl}
+        I18N_API_URL: ${i18n.api.graphqlUrl}
+        DEBUG: ${vars.debug}
+        APOLLO_HANDLER_OPTIONS: ${vars.apollo}
+        DB_PROXY_OPTIONS:
+          functionArn: ${dbProxy.arn}
+        SECURITY_OPTIONS: ${vars.security}
+
 api:
   component: "@webiny/serverless-api-gateway"
   inputs:
