--- a/examples/apps/site/package.json
+++ b/examples/apps/site/package.json
@@ -50,17 +50,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build": "rescripts build",
-    "build:dev": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,dev yarn build && yarn build:dev:ssr",
-    "build:dev:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r .env.json -e default,dev yarn build:ssr",
-    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,prod yarn build && yarn build:prod:ssr",
-    "build:prod:ssr": "cross-env NODE_ENV=production REACT_APP_ENV=ssr env-cmd -r .env.json -e default,prod yarn build:ssr",
-    "build:ssr": "webpack --progress --mode production --config ./ssr/webpack.config.js && cp ./ssr/handler.js build-ssr/",
-    "build:handler": "cross-env NODE_ENV=production webpack --config ./handler/webpack.config.js",
-    "postbuild": "yarn build:handler",
-    "start": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,local rescripts start",
-    "test": "rescripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build:dev":  "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,dev webiny-scripts build",
+    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,prod webiny-scripts build",
+    "start": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,local webiny-scripts start"
   },
   "browserslist": {
     "development": [
