--- a/packages/api-plugin-create-apollo-handler/package.json
+++ b/packages/api-plugin-create-apollo-handler/package.json
@@ -15,7 +15,8 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "apollo-server-lambda": "^2.9.7"
+    "apollo-server-lambda": "^2.9.7",
+    "boolean": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
