--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,15 +15,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@apollo/federation": "^0.10.2",
     "@webiny/plugins": "^3.0.1",
-    "graphql": "^14.4.2",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-middleware": "^4.0.1",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.5",
-    "graphql-type-json": "^0.3.0",
-    "graphql-type-long": "^0.1.1"
+    "graphql": "^14.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
