--- a/components/serverless-apollo-service/package.json
+++ b/components/serverless-apollo-service/package.json
@@ -4,23 +4,11 @@
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-typescript": "^7.7.7",
     "@serverless/core": "^1.1.1",
-    "@webiny/api": "^3.0.2",
     "@webiny/serverless-api-gateway": "^2.0.1",
     "@webiny/serverless-function": "^3.0.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "execa": "^2.0.5",
-    "fs-extra": "^8.1.0",
-    "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
-    "prettier": "^1.18.2",
-    "source-map-support": "^0.5.16",
-    "webpack": "^4.39.2"
+    "lodash.pick": "^4.4.0"
   },
   "scripts": {
     "build": "rm -rf dist && mkdir dist && cp -R serverless.js transform boilerplate dist/",
@@ -31,19 +19,7 @@
     "access": "public"
   },
   "adio": {
-    "ignore": {
-      "src": [
-        "@webiny/plugins"
-      ],
-      "dependencies": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/preset-env",
-        "@babel/preset-typescript",
-        "babel-loader",
-        "babel-plugin-module-resolver",
-        "source-map-support"
-      ]
-    }
+
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
