--- a/packages/http-handler-apollo-server/package.json
+++ b/packages/http-handler-apollo-server/package.json
@@ -7,15 +7,27 @@
     "type": "git",
     "url": "https://github.com/webiny/webiny-js.git"
   },
-  "description": "A pluginable function for the cloud.",
+  "description": "The Apollo Server as a function.",
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>",
     "Sven Al Hamad <sven@webiny.com>",
     "Adrian Smijulj <adrian@webiny.com>"
   ],
   "dependencies": {
+    "apollo-graphql": "^0.4.1",
     "@babel/runtime": "^7.5.5",
-    "@webiny/http-handler": "^2.1.0"
+    "@webiny/http-handler": "^2.1.0",
+    "@webiny/plugins": "^3.0.1",
+    "@webiny/api": "^3.0.2",
+    "graphql-middleware": "^4.0.1",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.5",
+    "graphql-type-json": "^0.3.0",
+    "graphql-type-long": "^0.1.1",
+    "boolean": "^3.0.1",
+    "graphql": "^14.4.2",
+    "graphql-iso-date": "^3.6.1",
+    "@apollo/federation": "^0.10.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
