--- a/examples/apps/site/package.json
+++ b/examples/apps/site/package.json
@@ -14,6 +14,7 @@
     "@webiny/app-typeform": "^3",
     "@webiny/plugins": "^3",
     "@webiny/react-router": "^2",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-link-batch-http": "^1.2.3",
     "apollo-link-http": "^1.5.9",
     "core-js": "^3.2.1",
@@ -50,9 +51,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build:dev":  "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,dev webiny-scripts build",
-    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,prod webiny-scripts build",
-    "start": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,local webiny-scripts start"
+    "build:dev":  "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,dev webiny-scripts run build",
+    "build:prod": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,prod webiny-scripts run build",
+    "start": "cross-env REACT_APP_ENV=browser env-cmd -r .env.json -e default,local webiny-scripts run start"
   },
   "browserslist": {
     "development": [
