--- a/packages/app-headless-cms/package.json
+++ b/packages/app-headless-cms/package.json
@@ -16,7 +16,11 @@
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
-    "@rmwc/menu": "^5.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-regular-svg-icons": "^5.6.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@svgr/webpack": "^4.3.2",
     "@webiny/app": "^3.0.3",
     "@webiny/app-admin": "^3.0.4",
@@ -33,15 +37,15 @@
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.10",
     "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "react-apollo": "^3.1.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
-    "react-google-recaptcha": "^1.1.0",
     "react-helmet": "^5.2.0",
     "react-hotkeyz": "^1.0.4",
-    "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-sortable-hoc": "^1.9.1",
+    "react-virtualized": "^9.21.2",
     "shortid": "^2.2.14",
     "timeago-react": "^2.0.0",
     "use-react-router": "^1.0.7"
