--- a/examples/apps/admin/package.json
+++ b/examples/apps/admin/package.json
@@ -22,9 +22,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "start": "env-cmd -r .env.json -e default,local webiny-scripts start",
-    "build:dev": "env-cmd -r .env.json -e default,dev webiny-scripts build",
-    "build:prod": "env-cmd -r .env.json -e default,prod webiny-scripts build"
+    "start": "env-cmd -r .env.json -e default,local webiny-scripts run start",
+    "build:dev": "env-cmd -r .env.json -e default,dev webiny-scripts run build",
+    "build:prod": "env-cmd -r .env.json -e default,prod webiny-scripts run build"
   },
   "browserslist": {
     "development": [
