fix: update config

--- a/packages/http-handler-apollo-server/tsconfig.json
+++ b/packages/http-handler-apollo-server/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{"path": "../http-handler"}]
+  "references": [{ "path": "../http-handler" }, { "path": "../graphql" }]
 }
