--- a/packages/http-handler-apollo-server/package.json
+++ b/packages/http-handler-apollo-server/package.json
@@ -18,7 +18,7 @@
     "@babel/runtime": "^7.5.5",
     "@webiny/http-handler": "^2.1.0",
     "@webiny/plugins": "^3.0.1",
-    "@webiny/api": "^3.0.2",
+    "@webiny/graphql": "^1.0.0",
     "graphql-middleware": "^4.0.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.5",
