--- a/packages/api-files/package.json
+++ b/packages/api-files/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@shelf/jest-mongodb": "^1.1.3",
-    "@webiny/api": "^3.0.2",
+    "@webiny/graphql": "^1.0.0",
     "@webiny/api-security": "^3.1.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
