--- a/packages/api-i18n/tsconfig.build.json
+++ b/packages/api-i18n/tsconfig.build.json
@@ -3,7 +3,7 @@
   "include": ["src"],
   "exclude": [
     "node_modules",
-    "../api",
+    "../graphql",
     "../api-plugin-commodo-db-proxy",
     "../api-security",
     "../commodo",
@@ -16,7 +16,7 @@
     "declarationDir": "dist"
   },
   "references": [
-    { "path": "../api/tsconfig.build.json" },
+    { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-plugin-commodo-db-proxy/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
