--- a/packages/api-i18n/tsconfig.json
+++ b/packages/api-i18n/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../api" },
+    { "path": "../graphql" },
     { "path": "../api-plugin-commodo-db-proxy" },
     { "path": "../api-security" },
     { "path": "../commodo" },
