fix: use "@webiny/graphql" package instead of "@webiny/graphql"

--- a/packages/api-mailchimp/tsconfig.json
+++ b/packages/api-mailchimp/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../api" },
+    { "path": "../graphql" },
     { "path": "../api-security" },
     { "path": "../commodo" },
     { "path": "../commodo-graphql" }
