--- a/packages/api-plugin-commodo-db-proxy/tsconfig.json
+++ b/packages/api-plugin-commodo-db-proxy/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../api" }, { "path": "../commodo-fields-storage-db-proxy" }]
+  "references": [{ "path": "../graphql" }, { "path": "../commodo-fields-storage-db-proxy" }]
 }
