--- a/packages/api-plugin-commodo-mongodb/package.json
+++ b/packages/api-plugin-commodo-mongodb/package.json
@@ -22,7 +22,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@webiny/api": "^3.0.2"
+    "@webiny/graphql": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
