--- a/packages/api-plugin-commodo-mongodb/tsconfig.build.json
+++ b/packages/api-plugin-commodo-mongodb/tsconfig.build.json
@@ -1,13 +1,13 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "dist", "../api"],
+  "exclude": ["node_modules", "dist", "../graphql"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
   "references": [
-    { "path": "../api/tsconfig.build.json" }
+    { "path": "../graphql/tsconfig.build.json" }
   ]
 }
