--- a/packages/api-plugin-create-apollo-handler/tsconfig.build.json
+++ b/packages/api-plugin-create-apollo-handler/tsconfig.build.json
@@ -1,11 +1,14 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../api"],
+  "exclude": ["node_modules", "./dist", "../graphql", "../http-handler-apollo-server"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "references": [{ "path": "../api/tsconfig.build.json" }]
+  "references": [
+    { "path": "../graphql/tsconfig.build.json" },
+    { "path": "../http-handler-apollo-server/tsconfig.build.json" }
+  ]
 }
