fix: use "@webiny/graphql" package instead of "@webiny/graphql"

--- a/packages/api-plugin-security-cognito/tsconfig.build.json
+++ b/packages/api-plugin-security-cognito/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "dist", "../api", "../api-security"],
+  "exclude": ["node_modules", "dist", "../graphql", "../api-security"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
