--- a/packages/api-plugin-security-cognito/tsconfig.json
+++ b/packages/api-plugin-security-cognito/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../api" }, { "path": "../api-security" }]
+  "references": [{ "path": "../graphql" }, { "path": "../api-security" }]
 }
