--- a/packages/api-plugin-security-cognito/package.json
+++ b/packages/api-plugin-security-cognito/package.json
@@ -12,7 +12,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@webiny/api": "^3.0.2",
+    "@webiny/graphql": "^1.0.0",
     "@webiny/api-security": "^3.1.0",
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.5.1",
