--- a/packages/api-security/package.json
+++ b/packages/api-security/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/api": "^3.0.2",
+    "@webiny/graphql": "^1.0.0",
     "@webiny/commodo": "^3.0.1",
     "@webiny/commodo-graphql": "^3.0.2",
     "@webiny/validation": "^3.0.1",
