--- a/packages/commodo-graphql/package.json
+++ b/packages/commodo-graphql/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@webiny/api": "^3.0.2",
+    "@webiny/graphql": "^1.0.0",
     "@webiny/commodo": "^3.0.1",
     "graphql": "^14.4.2",
     "lodash.foreach": "^4.5.0",
