fix: add missing packages

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -35,8 +35,6 @@
       "@webiny/api-plugin-commodo-mongodb": ["./packages/api-plugin-commodo-mongodb/src"],
       "@webiny/api-security/*": ["./packages/api-security/src/*"],
       "@webiny/api-security": ["./packages/api-security/src"],
-      "@webiny/api/*": ["./packages/api/src/*"],
-      "@webiny/api": ["./packages/api/src"],
       "@webiny/app/*": ["./packages/app/src/*"],
       "@webiny/app": ["./packages/app/src"],
       "@webiny/app-admin/*": ["./packages/app-admin/src/*"],
@@ -60,10 +58,17 @@
       "@webiny/commodo-graphql": ["./packages/commodo-graphql/src"],
       "@webiny/commodo-graphql/*": ["./packages/commodo-graphql/src/*"],
       "@webiny/commodo-fields-storage-db-proxy": ["./packages/commodo-fields-storage-db-proxy/src"],
+      "@webiny/graphql/*": ["./packages/graphql/src/*"],
+      "@webiny/graphql": ["./packages/graphql/src"],
+      "@webiny/http-handler-ssr": ["./packages/http-handler-ssr/src"],
       "@webiny/http-handler-ssr/*": ["./packages/http-handler-ssr/src/*"],
       "@webiny/http-handler/*": ["./packages/http-handler/src/*"],
       "@webiny/http-handler": ["./packages/http-handler/src"],
+      "@webiny/http-handler-apollo-server": ["./packages/http-handler-apollo-server/src"],
+      "@webiny/http-handler-apollo-server/*": ["./packages/http-handler-apollo-server/src/*"],
+      "@webiny/http-handler-files": ["./packages/http-handler-files/src"],
       "@webiny/http-handler-files/*": ["./packages/http-handler-files/src/*"],
+      "@webiny/http-handler-index": ["./packages/http-handler-index/src"],
       "@webiny/http-handler-index/*": ["./packages/http-handler-index/src/*"],
       "@webiny/form": ["./packages/form/src"],
       "@webiny/form/*": ["./packages/form/src/*"],
