--- a/examples/api/services/headless/package.json
+++ b/examples/api/services/headless/package.json
@@ -2,7 +2,7 @@
   "name": "headless-service",
   "version": "0.1.0",
   "scripts": {
-    "build": "webiny-scripts run build"
+    "build": "webiny run build"
   },
   "dependencies": {
     "@webiny/http-handler": "^2.1.0",
