--- a/examples/apps/site-ssr/package.json
+++ b/examples/apps/site-ssr/package.json
@@ -5,7 +5,7 @@
     "@webiny/project-utils": "^1.0.1"
   },
   "scripts": {
-    "build:dev": "env-cmd -r .env.json -e default,dev webiny-scripts run build",
-    "build:prod": "env-cmd -r .env.json -e default,prod webiny-scripts run build"
+    "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
+    "build:prod": "env-cmd -r .env.json -e default,prod webiny run build"
   }
 }
