--- a/examples/api/services/headlessCms/tsconfig.json
+++ b/examples/api/services/headlessCms/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../packages/api-i18n" },
+    { "path": "../../../../packages/api-headless-cms" },
     { "path": "../../../../packages/api-security" },
     { "path": "../../../../packages/http-handler" },
     { "path": "../../../../packages/http-handler-apollo-server" }
