--- a/examples/api/services/headlessCmsHandler/tsconfig.json
+++ b/examples/api/services/headlessCmsHandler/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../../packages/api-headless-cms" },
     { "path": "../../../../packages/api-i18n" },
     { "path": "../../../../packages/api-security" },
-    { "path": "../../../../packages/http-handler" },
-    { "path": "../../../../packages/http-handler-apollo-server" }
+    { "path": "../../../../packages/http-handler" }
   ]
 }
