--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@webiny/tracking": "^3.1.0",
     "ansi-escapes": "^4.2.1",
+    "boolean": "^3.0.1",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
