--- a/components/serverless-apollo-gateway/package.json
+++ b/components/serverless-apollo-gateway/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.0",
-    "@serverless/core": "^1.1.1",
+    "@webiny/serverless-component": "^0.1.0",
     "@webiny/serverless-function": "^3.0.1",
     "babel-loader": "^8.0.6",
     "execa": "^2.0.5",
