--- a/components/serverless-apollo-service/package.json
+++ b/components/serverless-apollo-service/package.json
@@ -4,14 +4,14 @@
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
-    "@serverless/core": "^1.1.1",
-    "@webiny/serverless-api-gateway": "^2.0.1",
+    "@webiny/serverless-component": "^0.1.0",
+    "@webiny/serverless-api-gateway": "^3.0.1",
     "@webiny/serverless-function": "^3.0.1",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0"
   },
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && cp -R serverless.js transform boilerplate dist/",
+    "build": "rm -rf dist && mkdir dist && cp -R serverless.js dist/",
     "postbuild": "cp package.json README.md LICENSE dist/",
     "prepublishOnly": "yarn build"
   },
