--- a/components/serverless-aws-api-gateway/package.json
+++ b/components/serverless-aws-api-gateway/package.json
@@ -18,6 +18,7 @@
   ],
   "license": "Apache",
   "dependencies": {
+    "@webiny/serverless-component": "^0.1.0",
     "@serverless/core": "^1.0.0",
     "aws-sdk": "^2.0.0",
     "lodash.isequal": "^4.5.0",
