--- a/components/serverless-aws-cloudfront/package.json
+++ b/components/serverless-aws-cloudfront/package.json
@@ -4,8 +4,8 @@
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
+    "@webiny/serverless-component": "^0.1.0",
     "@serverless/aws-cloudfront": "^6.0.0",
-    "@serverless/core": "^1.1.1",
     "lodash.get": "^4.4.2"
   },
   "scripts": {
