--- a/components/serverless-aws-cognito-user-pool/package.json
+++ b/components/serverless-aws-cognito-user-pool/package.json
@@ -4,7 +4,7 @@
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
-    "@serverless/core": "^1.1.1",
+    "@webiny/serverless-component": "^0.1.0",
     "aws-sdk": "^2.539.0",
     "lodash.isequal": "^4.5.0"
   },
