--- a/components/serverless-aws-lambda/package.json
+++ b/components/serverless-aws-lambda/package.json
@@ -24,6 +24,7 @@
     "@serverless/aws-lambda-layer": "^1.0.0",
     "@serverless/aws-s3": "^2.0.0",
     "@serverless/core": "^1.0.0",
+    "@webiny/serverless-component": "^0.1.0",
     "archiver": "^3.0.0",
     "aws-sdk": "^2.474.0",
     "fs-extra": "^7.0.0",
