--- a/components/serverless-db-proxy/package.json
+++ b/components/serverless-db-proxy/package.json
@@ -4,7 +4,7 @@
   "main": "serverless.js",
   "license": "MIT",
   "dependencies": {
-    "@serverless/core": "^1.1.1",
+    "@webiny/serverless-component": "^0.1.0",
     "@webiny/serverless-function": "^3.0.1",
     "bson": "^4.0.2",
     "lodash.get": "^4.4.2",
