--- a/components/serverless-files/package.json
+++ b/components/serverless-files/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@serverless/aws-s3": "^4.0.0",
-    "@serverless/core": "^1.1.1",
     "@webiny/serverless-apollo-service": "^3.0.2",
+    "@webiny/serverless-component": "^0.1.0",
     "@webiny/serverless-function": "^3.0.1",
     "aws-sdk": "^2.539.0",
     "lodash.get": "^4.4.2",
