--- a/components/serverless-page-builder/package.json
+++ b/components/serverless-page-builder/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@serverless/aws-s3": "^4.1.0",
-    "@serverless/core": "^1.1.1",
     "@webiny/serverless-apollo-service": "^3.0.2",
+    "@webiny/serverless-component": "^0.1.0",
     "lodash.get": "^4.4.2"
   },
   "scripts": {
