--- a/components/serverless-apollo-gateway/package.json
+++ b/components/serverless-apollo-gateway/package.json
@@ -26,7 +26,8 @@
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "."
   },
   "adio": {
     "ignore": {
