--- a/components/serverless-files/package.json
+++ b/components/serverless-files/package.json
@@ -34,7 +34,8 @@
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "./dist"
   },
   "adio": {
     "ignore": {
