--- a/components/serverless-apollo-service/package.json
+++ b/components/serverless-apollo-service/package.json
@@ -16,10 +16,8 @@
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
-    "access": "public"
-  },
-  "adio": {
-
+    "access": "public",
+    "directory": "."
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
