--- a/components/serverless-app/package.json
+++ b/components/serverless-app/package.json
@@ -13,7 +13,8 @@
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "."
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
