--- a/components/serverless-aws-lambda/package.json
+++ b/components/serverless-aws-lambda/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.1",
   "main": "./serverless.js",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "."
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
