--- a/components/serverless-db-proxy/package.json
+++ b/components/serverless-db-proxy/package.json
@@ -17,7 +17,8 @@
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "./dist"
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
